--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
   "name": "cm-react",
-  "version": "2.0.0",
+  "version": "2.0.2",
   "main": "dist/index.js",
   "module": "dist/index.js",
-  "files": [ "dist", "README.md" ],
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
+    ]
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/cmngan/cm-react"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build": "rm -rf dist && mkdir dist && NODE_ENV=production babel src/lib -d dist --copy-files"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,7 +38,8 @@
     ]
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.6.4",
+    "@babel/preset-react": "^7.6.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
