--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cm-react",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "babel": {
@@ -20,7 +20,7 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build": "rm -rf dist && mkdir dist && NODE_ENV=production babel src/lib -d dist --copy-files"
+    "prepublish": "rm -rf dist && mkdir dist && NODE_ENV=production babel src/lib -d dist --copy-files"
   },
   "eslintConfig": {
     "extends": "react-app"
