--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
+  },
+  "dependencies": {
+    "styled-components": "^4.4.0"
   }
 }
