change styled-components to peer dependencies

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
   },
-  "dependencies": {
+  "peerDependencies": {
     "styled-components": "^4.4.0"
   }
 }
